--- a/index.html
+++ b/index.html
@@ -155,26 +155,7 @@
               <h1>Biography</h1>
 
               <b
-                >I will join
-                 as a tenure-track Assistant Professor in Spring 2025, and
-                lead <span style="color: brown">远兮实验室</span> (<a
-                  href="http://endless.do/"
-                  >endless.do</a
-                >) as PI. <br /><br />I am actively recruiting
-                <del>25Fall PhD</del>, RA (<i style="color: chocolate">
-                  >6 months, research oriented </i
-                >) and visiting student (<i style="color: chocolate">
-                  target for 26Fall PhD@Westlake </i
-                >). If you are interested, please complete the
-                <a href="https://forms.gle/D4iSwo1nHVzG4dus7">Google Form</a>,
-                then send the required materials to
-                <a
-                  href="mailto:xiuyuliang@westlake.edu.cn?subject=【揭榜】XX大学-姓名-XX申请"
-                  >Email</a
-                >, as outlined in
-                <a href="https://zhuanlan.zhihu.com/p/692233176"
-                  >Recruitment</a
-                ></b
+                >I'm looking for summer internship opportunities 2025 in EU and part-time jobs in Lund/Malmö, Sweden!</b
               ><br />
 
               <!-- Calendly badge widget begin -->
@@ -191,102 +172,10 @@
 
               <hr />
 
-              I am currently a final Year Ph.D. student (2020.11 - Now), working
-              in
-              <a href="https://ps.is.tuebingen.mpg.de/">Perceiving Systems</a>,
-              Max Planck Institute for Intelligent Systems (MPI-IS), with
-              <a href="https://ps.is.tuebingen.mpg.de/person/black"
-                >Michael J. Black</a
-              >
-              and
-              <a href="https://dtzionas.com">Dimitrios Tzionas</a>. As
-              a Marie Sklodowska-Curie Fellow (MSCA) of
-              <a href="https://www.clipe-itn.eu/">CLIPE (ESR 11)</a>,
-              <!-- my Ph.D.
-              topic is
-              <i
-                >Image/video-based holistic modeling for the animation of body,
-                face, hands, feet, clothing, and interaction</i
-              >.  -->
-              I work on
-              <a
-                shape="rect"
-                href="javascript:toggleblock(&#39;biosection&#39;)"
-                class="toggleblock"
-                ><strong>Democratizing Human-centric Digitization</strong></a
-              >
-              in computer vision, computer graphics and machine learning.
-              <!-- which is part of the
-              <a href="https://www.clipe-itn.eu/">CLIPE</a> initiative and
-              funded by the European Union’s Horizon 2020 Research and
-              Innovation Programme.  -->
+              I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. Before that, I got my bachelor's degree at <a href="https://english.seiee.sjtu.edu.cn/"> School of Electronic Information & Electrical Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics, VR&AR and Computer Vision. I hope I can make my own contribution in these areas.
+              <br />
 
-              <div>
-                <div
-                  class="focus"
-                  id="biosection"
-                  style="display: none; background-color: lightgoldenrodyellow"
-                >
-                  <ul>
-                    <li>
-                      <strong>Human-centric.</strong>
-                      <i><u>Human is the measure of all things</u></i
-                      ><br />
-                      As intellectual beings, humans shape the world to our
-                      will. If we agree that pursuing AGI (Artificial General
-                      Intelligence) is valuable -- where agents can perform any
-                      intellectual task as well as or better than us, then
-                      learning skillsets through simulating lifelike virtual
-                      humans could be a critical baby step.
-                    </li>
-                    <li>
-                      <strong>Digitization.</strong>
-                      <i><u>What I cannot create, I do not understand</u></i
-                      ><br />
-                      Compared to text and images, the digitization of the 3D
-                      world is underdeveloped due to the costly and
-                      time-consuming process of capturing or synthesizing.
-                      Specifically, the challenge of creating 3D digital humans
-                      with photorealistic appearances, lifelike movements, and
-                      faithful personalities in a scalable manner remains
-                      unresolved.
-                    </li>
-                    <li>
-                      <strong>Democratization</strong>.
-                      <i><u>Immortality stems from generalization</u></i
-                      ><br />
-                      I am always intrigued by ideas that are conceptually
-                      intuitive yet practically applicable. Great models should
-                      be truly generalizable, scalable on large-scale raw data,
-                      accessible to the general public, and ultimately benefit
-                      all of humanity.
-                    </li>
-                  </ul>
-                </div>
-                <br />
-              </div>
-
-              I was briefly enrolled (2019.9-2020.10) as a Ph.D. student in
-              <a href="http://vgl.ict.usc.edu">Vision and Graphics Lab</a> at
-              University of Southern California, advised by
-              <a href="http://hao-li.com">Hao Li</a>. I got M.Sc. degree at
-              Shanghai Jiao Tong University in 2019, working in
-              <a href="https://www.mvig.org/"
-                >Machine Vision and Intelligence Group</a
-              >, advised by <a href="https://www.mvig.org/">Cewu Lu</a>, and got
-              B.Eng. degree in Digital Media Technology at Shandong University
-              in 2016, worked closely with
-              <a href="https://wanglusdu.github.io/">Lu Wang</a>.
-
-              <br /><br />
-              I spent wonderful time at USC Institute for Creative Technology
-              with
-              <a href="https://junxnui.github.io/">Jun Xing</a>, at Kwai Y-tech
-              with <a href="http://www.chongyangma.com">Chongyang Ma</a>, at
-              LightChaser Animation Studio with
-              <a href="https://zenustech.com/">Xinxin Zhang</a>, and at Ubisoft
-              La Forge. I am interning at Meta Reality Labs with
-              <a href="https://shunsukesaito.github.io/">Shunsuke Saito</a>.
+              On my student ID card, I am an engineering student. In my mind, I am a social observer. But in my heart, I am just a lifelong gamer exploring the world.
               <br />
             </td>
           </tr>
@@ -2418,7 +2307,7 @@
             href="https://xiuyuliang.cn/"
           >
             Prof. Yuliang Xiu</a
-          > for this template. <br />Find the code of shown gif <a href="https://github.com/JiaoKM/Jelly_Water_Tetris">here</a>
+          > for this template. <br />Find the code of shown gif <a href="https://github.com/JiaoKM/Jelly_Water_Tetris">here</a>。
             <span style="color: blue" id="demo"></span
           ></strong>
         </div>
