--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
               I'm a master student in <a href="https://www.lth.se/english/">LTH</a>, <a href="https://www.lunduniversity.lu.se/">Lund University</a>, enrolled in the Master's Programme in Virtual Reality and Augmented Reality. Before that, I got my bachelor's degree at <a href="https://english.seiee.sjtu.edu.cn/"> School of Electronic Information & Electrical Engineering (SEIEE)</a>, <a href="http://en.sjtu.edu.cn"> Shanghai Jiao Tong University (SJTU)</a>, majoring in Electronic Science & Technology. Now I'm interested in Computer Graphics, VR&AR and Computer Vision. I hope I can make my own contribution in these areas.
               <br />
               <br />
-              On my student ID card, I am an engineering student. In my mind, I am a social observer. But in my heart, I am just a lifelong gamer exploring the world.
+              On my student ID card, I am an engineering student. In my mind, I am a society observer. But in my heart, I am just a lifelong gamer exploring the world.
               <br />
             </td>
           </tr>
@@ -183,10 +183,10 @@
 
         <div class="logo">
           
-          <a href="https://www.mvig.org/member/"
+          <a href="https://en.sjtu.edu.cn/"
             ><img src="./image/SJTU_logo.png"
           /></a>
-          <a href="https://en.sdu.edu.cn/"
+          <a href="https://www.lunduniversity.lu.se/"
             ><img src="./image/lund_logo.png"
           /></a>
           <!-- <a href="https://www.ncku.edu.tw/"
@@ -218,16 +218,11 @@
         </h1>
 
         <div style="height: 205px; overflow: auto">
-          [2024/10/19] Please check out our Stable-X HuggingFace demos:
-          <a href="https://huggingface.co/spaces/Stable-X/StableNormal"
-            >StableNormal</a
-          >,
-          <a href="https://huggingface.co/spaces/Stable-X/StableRecon"
-            >StableRecon</a
-          >, and
-          <a href="https://huggingface.co/spaces/Stable-X/StableDelight"
-            >StableDelight</a
-          >.<br />
+          [2024/09/25] I attend the scholarship ceremony of LU this year and record a short 
+          <a href="https://www.bilibili.com/video/BV12SxVeTE3o/?spm_id_from=333.999.0.0&vd_source=86d8dcac0057c7ea489aea8846dc4434"
+            >video</a
+          >.
+          <br />
           [2024/08/29] Invited talk
           <i
             ><a href="https://www.bilibili.com/video/BV16E4m197ya"
