--- a/index.html
+++ b/index.html
@@ -225,10 +225,12 @@
           [2024/06/26] Graduate from Shanghai Jiao Tong University. Byebye, SJTU. <a href="./image/Graduation.jpg">Commemorative photo</a>
           <br />
           [2024/06/24] My work <a href="./paper/AMFS.pdf">Enhanced Anomaly Detection using Spatial-Alignment and Multi-scale Fusion</a>
-          is accepted by <a href="http://www.prcv.cn/">PRCV 2024</a><br />
-          [2024/05/16] I passed my bachelor thesis defense!<br />
-          [2024/03/21] I am accepted into the Master's Programme in VR&AR, Lund University, and get the scholarship for international students.<br />
-          
+          is accepted by <a href="http://www.prcv.cn/">PRCV 2024</a>!<br />
+          [2024/05/16] I pass my bachelor thesis defense!<br />
+          [2024/03/21] I am accepted into the Master's Programme of VR&AR in Lund University, and get the scholarship for international students.<br />
+          [2023/02/08] Win the <b>Best Overall Project</b> in <a href="https://www.imperial.ac.uk/continuing-professional-development/short-courses/summer-schools/winterschool/imperial-data-science-online-winter-school/">Imperial Data Science Winter School 2023</a>
+           held by Imperial College London!<br />
+          [2021/09/16] Start to work as a teaching assistant in course Thinking and Methodology in Programming (C++).<br />
         </div>
         <br /><br />
 
@@ -236,22 +238,22 @@
           Publications
           <a
             style="color: #4285f4"
-            href="https://scholar.google.com/citations?hl=zh-CN&user=9zAA9rQAAAAJ"
+            href="https://scholar.google.com.hk/citations?user=8547_fAAAAAJ&hl=zh-CN"
           >
             <span class="ai ai-google-scholar-square"></span>
           </a>
         </h1>
 
-        Representative works are
+        <!-- Representative works are
         <span style="background-color: lightgoldenrodyellow">highlighted</span>
         &nbsp;&nbsp; (*/&#8224; equal contribution, # corresponding author)<br />
 
-        <br />
+        <br /> -->
 
         <table class="pub_table">
           <tr id="xiu2024puzzleavatar" class="focus">
             <td class="pub_td1">
-              <img src="./about/puzzleavatar.jpg" />
+              <img src="./image/AMFS.png" />
               <iframe
                 src="https://ghbtns.com/github-btn.html?user=YuliangXiu&repo=PuzzleAvatar&type=star&count=true&v=2&size=small"
                 frameborder="0"
