--- a/index.html
+++ b/index.html
@@ -234,6 +234,10 @@
         </div>
         <br /><br />
 
+        <div align="center">
+          <img src="image/video.gif" alt="Shown" width="200px">
+        </div>
+
         <h1 id="citation">
           Publications
           <a
@@ -264,13 +268,12 @@
             </td>
             <td class="pub_td2">
               <b
-                >PuzzleAvatar: Assembling 3D Avatars from Personal
-                Albums&nbsp;</b
+                >Enhanced Anomaly Detection using Spatial-Alignment and Multi-scale Fusion&nbsp;</b
               ><br />
 
               <br />
-              <u>Yuliang Xiu</u>,
-              <a href="https://judyye.github.io/">Yufei Ye</a>,
+              <u>Keming Jiao</u>,
+              Xincheng Yao,
               <a href="http://itszhen.com/">Zhen Liu</a>,
               <a href="https://dtzionas.com">Dimitrios Tzionas</a>,
               <a href="https://ps.is.mpg.de/~black">Michael J. Black</a>
