--- a/index.html
+++ b/index.html
@@ -2015,7 +2015,7 @@
           </li>
         </ul>
         <div align="center">
-          <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ooq-HL7JBFNulS9RZKiki_qxntQVI1L1Cx0o-_DF3ZM&cl=ffffff&w=a"></script>
+          <script width="400px" type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ooq-HL7JBFNulS9RZKiki_qxntQVI1L1Cx0o-_DF3ZM&cl=ffffff&w=a"></script>
           <strong
             >This page is last updated at Nov. 2024. Thanks <a
             href="https://xiuyuliang.cn/"
