--- a/index.html
+++ b/index.html
@@ -2015,7 +2015,9 @@
           </li>
         </ul>
         <div align="center">
-          <script width="400px" type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ooq-HL7JBFNulS9RZKiki_qxntQVI1L1Cx0o-_DF3ZM&cl=ffffff&w=a"></script>
+          <div style="transform: scale(0.5); transform-origin: top left; width: max-content; height: max-content; overflow: hidden;">
+            <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ooq-HL7JBFNulS9RZKiki_qxntQVI1L1Cx0o-_DF3ZM&cl=ffffff&w=a"></script>
+          </div>
           <strong
             >This page is last updated at Nov. 2024. Thanks <a
             href="https://xiuyuliang.cn/"
