--- a/index.html
+++ b/index.html
@@ -267,15 +267,16 @@
 
               <br />
               <u>Keming Jiao</u>,
-              Xincheng Yao,
-              <a href="http://itszhen.com/">Zhen Liu</a>,
-              <a href="https://dtzionas.com">Dimitrios Tzionas</a>,
-              <a href="https://ps.is.mpg.de/~black">Michael J. Black</a>
+              <a href="https://scholar.google.com.hk/citations?user=DjCdmdQAAAAJ&hl=zh-CN">Xincheng Yao</a>,
+              Lu Wang,
+              Baozhu Zhang,
+              Zhenyu Liu,
+              <a href="https://ee.sjtu.edu.cn/EN/FacultyDetail.aspx?id=96&infoid=153&flag=153">Chongyang Zhang</a>
               <br />
               <div style="margin-top: 10px; margin-bottom: 10px">
                 <i>
                   <strong style="color: brown"
-                    >ACM Transactions On Graphics (SIGGRAPH Asia), 2024</strong
+                    >Chinese Conference on Pattern Recognition and Computer Vision, 2024</strong
                   ></i
                 >
               </div>
@@ -288,21 +289,14 @@
                   >&nbsp;</i
                 >Intro&nbsp;</a
               >
-              <a class="box" href="https://puzzleavatar.is.tue.mpg.de"
+              <a class="box" href="https://github.com/JiaoKM/GPD_dataset"
                 ><i class="fas fa-home" aria-hidden="true">&nbsp;</i
-                >Home&nbsp;</a
+                >Dataset&nbsp;</a
               >
-              <a class="box" href="https://arxiv.org/abs/2405.14869"
+              <a class="box" href="./paper/AMFS.pdf"
                 ><i class="fa fa-file-lines" aria-hidden="true">&nbsp;</i>Paper
               </a>
 
-              <a class="box" href="https://youtu.be/0hpXH2tVPk4"
-                ><i class="fa fa-video" aria-hidden="true">&nbsp;</i
-                >Video&nbsp;</a
-              >
-              <!-- <a class="box" href="https://zhuanlan.zhihu.com/p/626295986"
-                ><i class="fab fa-quora">&nbsp;</i>Zhihu&nbsp;</a
-              > -->
               <a
                 shape="rect"
                 href="javascript:togglebib(&#39;xiu2024puzzleavatar&#39;)"
@@ -324,14 +318,7 @@
 
           <tr id="ye2024stablenormal">
             <td class="pub_td1">
-              <img src="./about/stablenormal.jpg" />
-              <iframe
-                src="https://ghbtns.com/github-btn.html?user=Stable-X&repo=StableNormal&type=star&count=true&v=2&size=small"
-                frameborder="0"
-                scrolling="0"
-                width="200"
-                height="20"
-              ></iframe>
+              <img src="./image/MDAPN.png" />
             </td>
             <td class="pub_td2">
               <b
