--- a/index.html
+++ b/index.html
@@ -323,46 +323,14 @@
             </td>
             <td class="pub_td2">
               <b
-                >StableNormal: Reducing Diffusion Variance for Stable and Sharp
-                Normal&nbsp;</b
+                >Multi‑stream Domain Adversarial Prototype Network for Integrated Smart Roller TBM Main Bearing Fault Diagnosis across Various Low Rotating Speeds
+                &nbsp;</b
               ><br />
-              <a
-                href="https://huggingface.co/spaces/Stable-X/StableNormal"
-                style="padding-left: 0.5rem; vertical-align: top"
-                ><img
-                  style="margin-top: 0.5em"
-                  src="https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-StableNormal-orange"
-              /></a>
-              <a
-                href="https://huggingface.co/spaces/Stable-X/StableRecon"
-                style="padding-left: 0.5rem; vertical-align: top"
-                ><img
-                  style="margin-top: 0.5em"
-                  src="https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-StableRecon-orange"
-              /></a>
-              <a
-                href="https://huggingface.co/spaces/Stable-X/StableDelight"
-                style="padding-left: 0.5rem; vertical-align: top"
-                ><img
-                  style="margin-top: 0.5em"
-                  src="https://img.shields.io/badge/%F0%9F%A4%97%20Hugging%20Face-StableDelight-orange"
-              /></a>
               <br /><br />
-              <a href="https://github.com/hugoycj">Chongjie Ye*</a>,
-              <a href="https://lingtengqiu.github.io/">Lingteng Qiu*</a>,
-              <a href="https://github.com/gxd1994">Xiaodong Gu</a>,
-              <a href="https://github.com/hitsz-zuoqi">Qi Zuo</a>,
-              <a href="https://yushuang-wu.github.io/">Yushuang Wu</a>,
-              <a
-                href="https://scholar.google.com/citations?user=GHOQKCwAAAAJ&hl=zh-CN&oi=ao"
-                >Zilong Dong</a
-              >,<br />
-              <a href="https://research.cs.washington.edu/istc/lfb/"
-                >Leifeng Bo</a
-              >, <u>Yuliang Xiu#</u>,
-              <a href="https://gaplab.cuhk.edu.cn/">Xiaoguang Han#</a>
-              <br />
-              (* equal contribution, # corresponding author)
+              <a href="https://scholar.google.com.hk/citations?user=_EsDdb0AAAAJ&hl=zh-CN">Xingchen Fu</a>,
+              <u>Keming Jiao</u>,
+              <a href="https://github.com/gxd1994">Jianfeng Tao</a>,
+              Chengliang Liu
               <br />
               <div style="margin-top: 10px; margin-bottom: 10px">
                 <i>
