--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 >Enhanced Anomaly Detection using Spatial-Alignment and Multi-scale Fusion&nbsp;</b
               ><br />
 
-              <br />
+              
               <u>Keming Jiao</u>,
               <a href="https://scholar.google.com.hk/citations?user=DjCdmdQAAAAJ&hl=zh-CN">Xincheng Yao</a>,
               Lu Wang,
@@ -273,23 +273,25 @@
               Zhenyu Liu,
               <a href="https://ee.sjtu.edu.cn/EN/FacultyDetail.aspx?id=96&infoid=153&flag=153">Chongyang Zhang</a>
               <br />
+              One promoted memory bank-based anomaly detection using alignment and multi-scale fusion. And a new established dataset focusing on garment printing defects.
+              <br />
               <div style="margin-top: 10px; margin-bottom: 10px">
                 <i
                   >the 7th Chinese Conference on Pattern Recognition and Computer Vision (<strong
                     style="color: brown"
                     >PRCV 2024</strong
-                  >, <strong style="color: brown">Oral</strong>)</i
+                  >)</i
                 >
               </div>
 
-              <a
+              <!-- <a
                 shape="rect"
                 href="javascript:toggleabs(&#39;xiu2024puzzleavatar&#39;)"
                 class="toggleabs box"
                 ><i class="fas fa-angle-double-down" aria-hidden="true"
                   >&nbsp;</i
                 >Intro&nbsp;</a
-              >
+              > -->
               <a class="box" href="https://github.com/JiaoKM/GPD_dataset"
                 ><i class="fas fa-home" aria-hidden="true">&nbsp;</i
                 >Dataset&nbsp;</a
@@ -326,7 +328,7 @@
                 >Multi‑stream Domain Adversarial Prototype Network for Integrated Smart Roller TBM Main Bearing Fault Diagnosis across Various Low Rotating Speeds
                 &nbsp;</b
               ><br />
-              <br /><br />
+              <br />
               <a href="https://scholar.google.com.hk/citations?user=_EsDdb0AAAAJ&hl=zh-CN">Xingchen Fu</a>,
               <u>Keming Jiao</u>,
               <a href="https://github.com/gxd1994">Jianfeng Tao</a>,
@@ -334,9 +336,8 @@
               <br />
               <div style="margin-top: 10px; margin-bottom: 10px">
                 <i>
-                  <strong style="color: brown"
-                    >ACM Transactions On Graphics (SIGGRAPH Asia), 2024</strong
-                  ></i
+                  Reliability Engineering & System Safety p. 110284. Elsevier, 2024
+                  </i
                 >
               </div>
 
@@ -352,7 +353,7 @@
                 ><i class="fas fa-home" aria-hidden="true">&nbsp;</i
                 >Home&nbsp;</a
               >
-              <a class="box" href="https://arxiv.org/abs/2406.16864"
+              <a class="box" href="./paper/MDAPN.pdf"
                 ><i class="fa fa-file-lines" aria-hidden="true">&nbsp;</i>Paper
               </a>
 
