--- a/index.html
+++ b/index.html
@@ -328,11 +328,13 @@
                 >Multi‑stream Domain Adversarial Prototype Network for Integrated Smart Roller TBM Main Bearing Fault Diagnosis across Various Low Rotating Speeds
                 &nbsp;</b
               ><br />
-              <br />
+              
               <a href="https://scholar.google.com.hk/citations?user=_EsDdb0AAAAJ&hl=zh-CN">Xingchen Fu</a>,
               <u>Keming Jiao</u>,
               <a href="https://github.com/gxd1994">Jianfeng Tao</a>,
               Chengliang Liu
+              <br />
+
               <br />
               <div style="margin-top: 10px; margin-bottom: 10px">
                 <i>
@@ -341,7 +343,7 @@
                 >
               </div>
 
-              <a
+              <!-- <a
                 shape="rect"
                 href="javascript:toggleabs(&#39;ye2024stablenormal&#39;)"
                 class="toggleabs box"
@@ -352,18 +354,15 @@
               <a class="box" href="https://stable-x.github.io/StableNormal/"
                 ><i class="fas fa-home" aria-hidden="true">&nbsp;</i
                 >Home&nbsp;</a
-              >
+              > -->
               <a class="box" href="./paper/MDAPN.pdf"
                 ><i class="fa fa-file-lines" aria-hidden="true">&nbsp;</i>Paper
               </a>
 
-              <a class="box" href="https://youtu.be/sylXTxG_U2U"
-                ><i class="fa fa-video" aria-hidden="true">&nbsp;</i
-                >Video&nbsp;</a
-              >
+              
               <a
                 shape="rect"
-                href="javascript:togglebib(&#39;ye2024stablenormal&#39;)"
+                href="./bib/MDAPN.bib"
                 class="togglebib box"
                 ><i class="fas fa-quote-left" aria-hidden="true">&nbsp;</i
                 >Bibtex&nbsp;</a
@@ -406,13 +405,7 @@
 
         <h1>
           Invited Talks
-          <a
-            style="color: #ff0000"
-            href="https://www.youtube.com/channel/UCicL0Co86tGbzoV2heWiEaA"
-          >
-            <span class="fa-brands fa-youtube"></span>
-          </a>
-          <a style="color: #08a4d4" href="https://space.bilibili.com/86857008">
+          <a style="color: #08a4d4" href="https://space.bilibili.com/25704273">
             <span class="fa-brands fa-bilibili"></span>
           </a>
         </h1>
