--- a/index.html
+++ b/index.html
@@ -334,7 +334,7 @@
               <a href="https://github.com/gxd1994">Jianfeng Tao</a>,
               Chengliang Liu
               <br />
-
+              A novel domainadversarial prototype network diagnostic algorithm with a multi-stream fusion feature encoder (MDAPN) based on smart roller monitoring data.
               <br />
               <div style="margin-top: 10px; margin-bottom: 10px">
                 <i>
@@ -404,7 +404,7 @@
          <a href="mailto: yuliang.xiu@tue.mpg.de">Email</a>.</strong> -->
 
         <h1>
-          Invited Talks
+          JokeRAD_ ~ Personal Podcast
           <a style="color: #08a4d4" href="https://space.bilibili.com/25704273">
             <span class="fa-brands fa-bilibili"></span>
           </a>
