--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
               
               <a href="https://scholar.google.com.hk/citations?user=_EsDdb0AAAAJ&hl=zh-CN">Xingchen Fu</a>,
               <u>Keming Jiao</u>,
-              <a href="https://github.com/gxd1994">Jianfeng Tao</a>,
+              <a href="https://me.sjtu.edu.cn/en/FullTimeTeacher/taojianfeng.html">Jianfeng Tao</a>,
               Chengliang Liu
               <br />
               A novel domainadversarial prototype network diagnostic algorithm with a multi-stream fusion feature encoder (MDAPN) based on smart roller monitoring data.
