--- a/index.html
+++ b/index.html
@@ -300,6 +300,14 @@
                 ><i class="fa fa-file-lines" aria-hidden="true">&nbsp;</i>Paper
               </a>
 
+              <a
+                shape="rect"
+                href="./bib/AMFS.bib"
+                class="togglebib box"
+                ><i class="fas fa-quote-left" aria-hidden="true">&nbsp;</i
+                >Bibtex&nbsp;</a
+              >
+
               <!-- <a
                 shape="rect"
                 href="javascript:togglebib(&#39;xiu2024puzzleavatar&#39;)"
