--- a/index.html
+++ b/index.html
@@ -153,10 +153,9 @@
             <td>
               <br />
               <h1>Biography</h1>
-
-              <b
-                >I'm looking for summer internship opportunities 2025 in EU and part-time jobs in Lund/Malmö, Sweden!</b
-              ><br />
+              <b>I will start to work at Sony Nordic next January in Vision & AI systems!</b><br />
+              <del><b>I'm looking for summer internship opportunities 2025 in EU and part-time jobs in Lund/Malmö, Sweden!</b
+              ></del><br />
 
               <!-- Calendly badge widget begin -->
               <link
@@ -192,11 +191,11 @@
           <!-- <a href="https://www.ncku.edu.tw/"
             ><img src="./about/ncku_logo.png"
           /></a> -->
-          <!-- <span class="logo2">
-            <a href="https://about.meta.com/realitylabs/"
-              ><img src="./about/meta_logo.png"
+          <span class="logo2">
+            <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all"
+              ><img src="./image/sony_logo.jpg"
             /></a>
-            <a
+            <!-- <a
               href="https://montreal.ubisoft.com/en/our-commitments/rd-la-forge/"
               ><img src="./about/ubisoft_logo.png"
             /></a>
@@ -205,8 +204,8 @@
             /></a>
             <a href="http://www.zhuiguang.com/?lang=en"
               ><img src="./about/lightchaser_logo.png"
-            /></a>
-          </span> -->
+            /></a> -->
+          </span>
         </div>
 
 
@@ -216,6 +215,8 @@
         </h1>
 
         <div style="height: 205px; overflow: auto">
+          [2024/12/03] I will start to work at <a href="https://www.linkedin.com/company/sony-europe/posts/?feedView=all">Sony Nordic</a> next January in Vision & AI systems!
+          <br />
           [2024/09/25] I attend the scholarship ceremony of LU this year and record a short 
           <a href="https://www.bilibili.com/video/BV12SxVeTE3o/?spm_id_from=333.999.0.0&vd_source=86d8dcac0057c7ea489aea8846dc4434"
             >video</a
