--- a/index.html
+++ b/index.html
@@ -1050,12 +1050,12 @@
         <div align="center">
           <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=Ooq-HL7JBFNulS9RZKiki_qxntQVI1L1Cx0o-_DF3ZM&cl=ffffff&w=a"></script>
           <strong
-            >This page is last updated at Nov. 2024. Thanks <a
+            >Thanks <a
             href="https://xiuyuliang.cn/"
           >
             Prof. Yuliang Xiu</a
-          > for this template. <br />Find the code of shown gif <a href="https://github.com/JiaoKM/Jelly_Water_Tetris">here</a>。
-            <span style="color: blue" id="demo"></span
+          > for this template. Find the code of shown gif <a href="https://github.com/JiaoKM/Jelly_Water_Tetris">here</a>. <br />
+          This page is last updated at <span style="color: blue" id="demo"></span
           ></strong>
         </div>
       </div>
