--- a/index.html
+++ b/index.html
@@ -115,12 +115,12 @@
                       <span class="ai ai-researchgate fa-xl"></span>
                     </a> -->
                     <span style="color: gray; font-weight: normal">|</span>
-                    <!-- <a
+                    <a
                       style="color: black"
-                      href="https://www.linkedin.com/in/yuliangxiu"
+                      href="https://www.linkedin.com/in/keming-jiao-323bba300/"
                     >
                       <span class="fa fa-linkedin fa-xl"></span>
-                    </a> -->
+                    </a>
 
                     <!-- <a
                       style="color: black"
@@ -135,7 +135,12 @@
                     >
                       <span class="fa-brands fa-zhihu fa-xl"></span>
                     </a>
-
+                    <a
+                      style="color: black"
+                      href="https://www.youtube.com/channel/UCq5h0qlE4iUc3Caegc7rjeA"
+                    >
+                      <span class="fa-brands fa-youtube fa-xl"></span>
+                    </a>
                     <a
                       style="color: black"
                       href="https://space.bilibili.com/25704273"
