--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <a
                       style="color: black"
                       href="https://www.lth.se/english/"
-                      >Lund University, LTH</a
+                      >LTH, Lund University</a
                     ><br />
                     <br />
                     <a href="mailto: keming.jiao.6688@student.lu.se">
